--- a/scss/modules/box.scss
+++ b/scss/modules/box.scss
@@ -16,6 +16,7 @@
 
 .box-primary {
     text-align: center;
+    margin-bottom: 30px;
     & img {
         margin-right: 10px;
     }
