--- a/scss/modules/header.scss
+++ b/scss/modules/header.scss
@@ -26,7 +26,7 @@
 
 .overview-header{
     color: $dark-grayish-blue;
-    margin-top: 70px;
+    margin-top: 50px;
     margin-bottom: 30px;
     @include medium-and-above() {
         margin-top: 10px;
